--- a/SwordDemoLibrary/zxingscanner/src/main/res/layout/activity_main.xml
+++ b/SwordDemoLibrary/zxingscanner/src/main/res/layout/activity_main.xml
@@ -3,9 +3,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".MainActivity">
 
     <SurfaceView
+        android:id="@+id/surface_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
     
