--- a/SwordDemoLibrary/zxingscanner/src/main/res/values/ids.xml
+++ b/SwordDemoLibrary/zxingscanner/src/main/res/values/ids.xml
@@ -3,4 +3,6 @@
     <item type="id" name="decode"/>
     <item type="id" name="decode_failed"/>
     <item type="id" name="decode_succeeded"/>
+    <item type="id" name="restart_preview"/>
+    <item type="id" name="quit"/>
 </resources>
