--- a/SwordDemoLibrary/learnkotlin/src/main/res/values/colors.xml
+++ b/SwordDemoLibrary/learnkotlin/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimaryDark">#303F9F</color>
 </resources>
