--- a/SwordDemoLibrary/camera/src/main/res/xml/file_paths.xml
+++ b/SwordDemoLibrary/camera/src/main/res/xml/file_paths.xml
@@ -1,6 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <paths>
-    <files-path
-        name="images"
-        path="images/"/>
+    <external-files-path name="my_images" path="Pictures"/>
 </paths>
