--- a/SwordDemoLibrary/zxingscanner/src/main/res/layout/activity_main.xml
+++ b/SwordDemoLibrary/zxingscanner/src/main/res/layout/activity_main.xml
@@ -21,5 +21,13 @@
         android:layout_height="match_parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"/>
+    
+    <ImageView
+        android:id="@+id/code_image"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
