--- a/SwordDemoLibrary/floatball/src/main/res/layout/activity_main.xml
+++ b/SwordDemoLibrary/floatball/src/main/res/layout/activity_main.xml
@@ -4,10 +4,11 @@
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
 	tools:context=".MainActivity">
+	
+	
 
-	<com.sword.floatball.FloatBallView
+	<TextView
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:src="@drawable/floatball"/>
-
+		android:text="float ball"/>
 </FrameLayout>
