--- a/SwordDemoLibrary/floatball/src/main/res/layout/activity_main.xml
+++ b/SwordDemoLibrary/floatball/src/main/res/layout/activity_main.xml
@@ -4,11 +4,13 @@
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
 	tools:context=".MainActivity">
-	
-	
 
-	<TextView
+	
+	<com.sword.floatball.FloatMenuView
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"/>
+	<!--<ImageView
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:text="float ball"/>
+		android:src="@drawable/gift"/>-->
 </FrameLayout>
