--- a/SwordDemoLibrary/floatball/src/main/res/layout/activity_user.xml
+++ b/SwordDemoLibrary/floatball/src/main/res/layout/activity_user.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@android:color/darker_gray">
+    android:background="#F2F2F2">
 
     <ImageView
         android:id="@+id/avatar"
