--- a/SwordDemoLibrary/pluginable/src/main/res/layout/activity_main.xml
+++ b/SwordDemoLibrary/pluginable/src/main/res/layout/activity_main.xml
@@ -1,10 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
+	android:orientation="vertical"
 	tools:context=".MainActivity">
+	
+	<TextView
+		android:id="@+id/title"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"/>
 
 	<Button
 		android:id="@+id/loadPlugin"
@@ -12,6 +18,21 @@
 		android:layout_height="wrap_content"
 		android:text="loadPlugin"
 		android:onClick="onClick"/>
+	
+	<Button
+		android:id="@+id/showTitle"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:text="show title"
+		android:onClick="onClick"/>
+		
+	
+	<Button
+		android:id="@+id/loadHofix"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:text="hofix button"
+		android:onClick="onClick"/>
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
