--- a/SwordDemoLibrary/app/src/main/res/layout/activity_main.xml
+++ b/SwordDemoLibrary/app/src/main/res/layout/activity_main.xml
@@ -1,28 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:app="http://schemas.android.com/apk/res-auto"
-	android:layout_width="match_parent"
-	android:layout_height="match_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/rootView"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-	<com.example.swordlibrary.viewpager.TabLayout
-		android:id="@+id/tabLayout"
-		android:layout_width="40dp"
-		android:layout_height="match_parent"
-		android:orientation="vertical"
-		android:background="#2B2B2B"
-		app:layout_constraintLeft_toLeftOf="parent"
-		app:layout_constraintRight_toLeftOf="@id/viewpager"
-		app:layout_constraintTop_toTopOf="parent"
-		app:layout_constraintBottom_toBottomOf="parent"/>
+    <!--<com.example.swordlibrary.viewpager.TabLayout
+        android:id="@+id/tabLayout"
+        android:layout_width="40dp"
+        android:layout_height="match_parent"
+        android:background="#2B2B2B"
+        android:orientation="vertical" />
 
-	<androidx.viewpager.widget.ViewPager
-		android:id="@+id/viewpager"
-		android:layout_width="0dp"
-		android:layout_height="match_parent"
-		android:background="#ffffff"
-		app:layout_constraintTop_toTopOf="parent"
-		app:layout_constraintLeft_toRightOf="@id/tabLayout"
-		app:layout_constraintRight_toRightOf="parent"
-		app:layout_constraintBottom_toBottomOf="parent"/>
+    <androidx.viewpager.widget.ViewPager
+        android:id="@+id/viewpager"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:background="#ffffff" />-->
+    
+    <Button
+        android:id="@+id/switch_viewPager"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="开/关 ViewPager"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
