--- a/SwordDemoLibrary/app/src/main/res/values/colors.xml
+++ b/SwordDemoLibrary/app/src/main/res/values/colors.xml
@@ -3,4 +3,9 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
+
+    <color name="login_dialog_phone_hint">#D6D6D6</color>
+    <color name="color_orange">#F27920</color>
+    <color name="color_gray">#CFD0D2</color>
+    <color name="dialog_title_text_color">#3f4044</color>
 </resources>
