--- a/SwordDemoLibrary/app/src/main/res/layout/activity_main.xml
+++ b/SwordDemoLibrary/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,34 @@
     android:orientation="vertical"
     android:scrollbars="vertical">
 
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/color_gray"
+        android:layout_marginTop="40dp">
+
+        <com.example.swordlibrary.view.MaterialEditText
+            android:hint="请输入文本"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+    </FrameLayout>
+
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorAccent"
+        android:layout_marginTop="20dp">
+
+        <androidx.appcompat.widget.AppCompatEditText
+            android:hint="请输入文本"
+            android:theme="@style/Widget.AppCompat.EditText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
+    </FrameLayout>
+
+
     <!--<com.example.swordlibrary.view.DashBoardView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
@@ -38,9 +66,9 @@
         android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"/>-->
 
-    <com.example.swordlibrary.view.FlipPageView
+    <!--<com.example.swordlibrary.view.FlipPageView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"/>-->
 
 
     <!--<com.example.swordlibrary.viewpager.TabLayout
