--- a/SwordDemoLibrary/app/src/main/res/values/styles.xml
+++ b/SwordDemoLibrary/app/src/main/res/values/styles.xml
@@ -9,7 +9,7 @@
         <item name="android:textSize">14sp</item>
         <item name="android:gravity">center</item>
         <item name="background">@drawable/button_circle_background</item>
-        <item name="android:foreground">null</item>
+        <item name="android:foreground">@null</item>
     </style>
 
 
