--- a/SwordDemoLibrary/app/src/main/res/layout/activity_main2.xml
+++ b/SwordDemoLibrary/app/src/main/res/layout/activity_main2.xml
@@ -1,19 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".java.MainActivity2"
+    tools:context=".MainActivity"
     android:paddingRight="25dp"
     android:paddingLeft="25dp">
-<!--
-    <com.example.swordlibrary.view.VerifyCodeInputView
-        android:layout_width="match_parent"
+    
+    <TextView
+        android:id="@+id/text_tv"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:inputType="number"
-        app:borderColor="#B7B7B7"
-        app:gap="40" />-->
+        android:text="测试文本"/>
 
 </LinearLayout>
