--- a/SwordDemoLibrary/app/src/main/res/layout/motion_youtube_film_like.xml
+++ b/SwordDemoLibrary/app/src/main/res/layout/motion_youtube_film_like.xml
@@ -1,13 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout 
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    
+
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/file_image"
         android:layout_width="120dp"
         android:layout_height="wrap_content"
-        />
+        android:scaleType="fitStart"
+        android:src="@drawable/film_cover"
+        android:layout_marginTop="16dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/film_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:paddingVertical="8dp"
+        android:text="@string/film_title"
+        android:textColor="@android:color/white"
+        android:textSize="14sp"
+        app:layout_constraintLeft_toRightOf="@id/file_image"
+        app:layout_constraintTop_toTopOf="@id/file_image" />
+
+    <RatingBar
+        android:id="@+id/film_rating"
+        style="?attr/ratingBarStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:numStars="5"
+        android:progressTint="@color/color_orange"
+        android:paddingTop="8dp"
+        android:rating="4.5"
+        app:layout_constraintLeft_toLeftOf="@id/film_title"
+        app:layout_constraintTop_toBottomOf="@id/film_title" />
+
+    <!--<com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab_favourite"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_bookmark_24dp"
+        android:tint="@color/color_orange"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"/>-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
