--- a/SwordDemoLibrary/app/src/main/res/layout/circular_reveal_constraint_helper.xml
+++ b/SwordDemoLibrary/app/src/main/res/layout/circular_reveal_constraint_helper.xml
@@ -5,6 +5,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+    
+    <ProgressBar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        style="@style/Widget.MaterialComponents.CircularProgressIndicator"/>
 
     <sword.view.constraint.CircularRevealConstraintHelper
         android:layout_width="wrap_content"
